scrollbar fix

--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,7 @@
   margin-top: 8vh;
   height: 90vh;
   overflow: auto;
+  scrollbar-width: none;
 }
 
 .main {
